2006-10-28  Akira TAGOH  <at@gclab.org>

	* donrails/app/views/layouts/MT/notes.rhtml: show the categorylist by
	default.

	* donrails/app/views/shared/MT/module-categorylist.rhtml:
	new file to show the category list with Ajax.

	* donrails/app/views/shared/MT/module-titlelist.rhtml:
	modified to show the recent articles with Ajax.

	* donrails/app/views/shared/MT/simple-hatena.rhtml:
	new file to add links for Hatena Bookmark features.

2006-10-27  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/config/routes.rb: Fix for such url (e.g. http://cfard3:3000/archives/category/road.html )	
	* donrails/app/controllers/notes_controller.rb (NotesController::show_category): likewise.
	* donrails/test/integration/browse_story_test.rb (BrowseStoryTest::test_fromtop): Add test for it.

	* donrails/app/models/ping.rb (Ping): Fix to change '/notes' to appropriate URI. This problem cause problem when you add/modify a article.

2006-10-26  ARAKI Yasuhiro  <yasu@debian.or.jp>

	** TABLE change. VARCHAR(100) to TEXT.
	* upgrade_1_4.mysql.sql: New file. 
	* donrails/tool/tables-mysql.sql: Apply for this change. (For
	PostgreSQL and Sqlite were not modified. TODO).

	* donrails/app/views/notes/rdf_recent.rxml: Change channel link url from '/archives' to ''.

2006-10-25  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/update-custom.sh: New file. It helps you to maintain  your layout customization. For usage, please read in this file.

2006-10-24  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* Remove auto_link in following files.
	- donrails/app/views/shared/MT/trackback.rhtml
	- donrails/app/views/shared/default/comment-enrollment.rhtml
	- donrails/app/views/shared/default/comment2.rhtml
	- donrails/app/views/shared/comment.rhtml
	- donrails/app/views/shared/timelink.rhtml
	- donrails/app/views/notes/MT/show_enrollment.rhtml
	- donrails/app/views/notes/MT/show_title.rhtml
	- donrails/app/views/notes/MT/noteslist.rhtml
	- donrails/app/views/notes/default/show_enrollment.rhtml