@@ -1,3 +1,8 @@
+2006-10-29  ARAKI Yasuhiro  <yasu@debian.or.jp>
+
+	* donrails/app/controllers/login_controller.rb (LoginController::fix_article): Fix to show trackback URL from 'notes' to 'archives'.
+	(LoginController::add_article): likewise.
+
 2006-10-28  Akira TAGOH  <at@gclab.org>
 
 	* donrails/app/views/layouts/MT/notes.rhtml: show the categorylist by
